# cythonplus-sandbox

./: .gitignore  README.md
advanced_containers/: README.md  extension_any_scalar.py  extension_scalar_dicts.py  setup_containerlib.py
advanced_containers/containerlib/: any_scalar.pyx  any_scalar_dict.pyx  any_scalar_list.pxd  scalar_dicts.pxd  scalar_dicts.pyx  version.pyx
advanced_containers/demo/: app.py  engine.pyx
advanced_containers/test/: fast_test.sh  setup_all_tests.py  test_any_scalar.pyx  unit_test_all.py  (+3 more)
benchmark/: .gitignore  README.md  all_build_bench.sh  all_install.sh  bench_actor_static_server.sh  bench_gu_wn_python.sh  build_actor_static_server.sh  build_httpd_plus.sh  constants.sh  copy_750_images.py  copy_750_images.sh  install_packages.sh  start_actor_server.sh  stop_actor_server.sh  stop_httpd_plus.sh  wrk_rnd.lua  wrk_rnd_small.lua
benchmark_httpd_plus/: README.md  build_gu_wn_python.sh  do_bench.sh  fetch_many_images.sh  gen_small_files.py  gen_small_files.sh  install_packages.sh  start_httpd_plus.sh
exemples/: README.md
exemples/mac_scan_fs/scan-filesystem/rust/: Cargo.toml
exemples/mac_scan_fs/scan-filesystem/rust/src/: main.rs
sandbox/: comparison.md  containers_v1.py  containers_v1.pyx  fake.py  fibonacci.py  fibonacci_cyp.pyx  fibonacci_orig.py  helloworld.py  helloworld.pyx  list_sort_reverse_in_place.py  list_sort_reverse_in_place.pyx
snippets/: README.md  _folders.sh  make_all.sh  run_all.sh
transonic_integration/: README.md
transonic_test/: README.md
utils/: gcc_macports_alias.sh  make_clean.sh  quickcython.py
(+847 files in other folders)
